Adds order page and status change from 'carted' to 'purchased' and added order ID

--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -3,13 +3,13 @@
 one:
   user_id: 1
   product_id: 1
-  quanity: 1
+  quantity: 1
   subtotal: 9.99
   tax: 9.99
 
 two:
   user_id: 1
   product_id: 1
-  quanity: 1
+  quantity: 1
   subtotal: 9.99
   tax: 9.99
